# SuffixTree

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
modules/: AlphTraits.h  Node.cpp  Node.h  State.cpp  State.h  SuffixTree.cpp  SuffixTree.h  Tasks.h  tasks.cpp  tasks.h
modules/nodes/: Node.h
modules/strategy/: NodeOnArray.h  NodeOnHashMap.h  NodeOnList.h  NodeOnMap.h
